--- a/about.html
+++ b/about.html
@@ -65,9 +65,10 @@
         <div>
             <p>
                 At this point the database has three tables and will soon be ready to interact with the back-end and
-                front-end pieces of software.
+                front-end pieces of software. <a href="https://github.com/aitemir/assignment_lookandfeel"> Github Link</a> 
             </p>
             <img src="./img/db1.png">
+            
         </div>
     </div>
     <footer class="mdl-mini-footer" id="footer">
